--- a/_layouts/extension.html
+++ b/_layouts/extension.html
@@ -5,6 +5,10 @@ layout: default
 <div class="page-header">
   <h1>{{ page.title }}</h1>
   {% if page.since_version %}<span class="label label-info pull-right" title="Available since uComponents version {{ page.since_version }}">v{{ page.since_version }}</span>{% endif %}
+  <div><small>
+    <span class="muted">Type:</span> {{ page.extension_type }}<br>
+    <span class="muted">Alias:</span> {{ page.extension_alias }}</small>
+  </div>
 </div>
 
 {{ content }}
